<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HueWhiteListAdmin</string>

    <string name="disclaimer">This app is using the official hue-Java-SDK provided by Philips.\nAlthough it is very unlikely that using this app will cause any unwanted results you should still be aware that it is modifying the configuration of your hue-bridge.\nSo please think twice before deleting any entries. You\'re using this app at your own risk.</string>

    <string name="about_text"><![CDATA[Created by <b>%s</b>.<br/><br/>Visit the website at:<br/><a href="http://huewhitelistadmin.achimonline.de">huewhitelistadmin.achimonline.de</a>"]]></string>

    <string name="cached_bridge_info_cleared">Cached bridge info cleared.</string>

    <string name="bridgelist_title">Available Bridges</string>
    <string name="bridgelist_select_bridge">Please find and select a bridge to use for this app.</string>

    <string name="pushlinkauthentication_title">Authentication</string>
    <string name="pushlinkauthentication_text">Press the link button on the bridge.</string>

    <string name="whitelist_title">WhiteList Entries</string>
    <string name="whitelist_empty">Fetching &#8230;</string>
    <string name="whitelist_refresh">Refresh</string>

    <string name="whitelistitemdetail_title">WhiteList Entry Detail</string>
    <string name="whitelistitemdetail_label_username">User name:</string>
    <string name="whitelistitemdetail_label_appname">App name:</string>
    <string name="whitelistitemdetail_label_devicename">Device name:</string>
    <string name="whitelistitemdetail_label_createdat">Created at:</string>
    <string name="whitelistitemdetail_label_lastusedat">Last used at:</string>
    <string name="whitelistitemdetail_button_remove">Remove</string>
    <string name="whitelistitemdetail_own_username_info">%s is currently using this name/key to connect to the bridge.\nUnfortunately it\'s not possible for the app to remove itself from the whitelist.</string>
    <string name="whitelistitemdetail_removal_confirmation">Do you really want to remove this entry from your system?</string>
    <string name="whitelistitemdetail_toast_removed">Entry successfully removed.</string>

    <string name="menu_clear_cached_bridge_info">Clear cached bridge info</string>
    <string name="menu_about">About</string>
    <string name="menu_find_new_bridge">Find new Bridge</string>

    <string name="searching">Searching &#8230;</string>
    <string name="connecting">Connecting &#8230;</string>

    <string name="error">Error</string>

</resources>
